Trying to connect using socket.io

--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
 		<hp>
 			<div id="loading"></div>
 		</hp>
-		<!--<script src="jspm_packages/github/es-shims/es6-shim@0.35.0.js"></script>-->
-		<script src="jspm_packages/system.js" ></script>
-		<!--<script src="jspm_packages/npm/rxjs@5.0.0-beta.7.js"></script>
+		<!--<script src="jspm_packages/github/es-shims/es6-shim@0.35.0.js"></script>
+		<script src="jspm_packages/npm/rxjs@5.0.0-beta.7.js"></script>
 		<script src="jspm_packages/npm/zone.js@0.6.12.js"></script>
 		<script src="jspm_packages/npm/reflect-metadata@0.1.3.js"></script>-->
+		<script src="jspm_packages/system.js" ></script>
 		<script src="config.js" ></script>
 		<script>
 		window.addEventListener("load", function() {
