--- a/public/index.html
+++ b/public/index.html
@@ -12,19 +12,27 @@
 		<script src="jspm_packages/npm/zone.js@0.6.12.js"></script>
 		<script src="jspm_packages/npm/reflect-metadata@0.1.3.js"></script>-->
 		<script src="jspm_packages/system.js" ></script>
-		<script src="config.js" ></script>
+		<script src="jspm.browser.js" ></script>
+		<script src="jspm.config.js"></script>
+		<script src="socket.io/socket.io.js"></script>
 		<script>
+			var Socket = io();
+		
 		window.addEventListener("load", function() {
 				
 				var load = document.getElementById("loading");
 				load.innerHTML = "Please Stand By...";
-				System.import("app/main").then(function(bootstrap) {
-					load.innerHTML = "BOOTSTRAP DAT!";
-					bootstrap.default();
-				},
-				function(err)
+				System.import("app/main")
+				.then((bootstrap) =>
 				{
-					document.getElementById("body").innerHTML = "ERR: " + err.message;
+					console.log("BOOTSTRAP DAT!");
+					bootstrap.default(Socket)
+					.then(function(){ console.log('bootstrap.then is done.'); },
+					(err) => { console.log('FHP->bootstrap->Error=> '+err); });
+				},
+				(err) =>
+				{
+					console.log('FHP->Import->Error=> '+err);
 				});
 			});
 		</script>
